// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardController GET /v2/reward/schedules with active param true returns active schedules for default chain and all vaults 1`] = `
Object {
  "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28": Array [
    Object {
      "amount": 2035.82,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1619715600,
      "start": 1619110800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 0.094819176,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1617901200,
      "start": 1617296400,
      "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
    },
    Object {
      "amount": 1865.215,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1620320400,
      "start": 1619715600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1711.335,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1620925200,
      "start": 1620320400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 0.0302171,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1620925200,
      "start": 1620320400,
      "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
    },
    Object {
      "amount": 1572.205,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1621530000,
      "start": 1620925200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1446.5,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1622134800,
      "start": 1621530000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1332.45,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1622739600,
      "start": 1622134800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1229.185,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1623344400,
      "start": 1622739600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1135.4,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1623949200,
      "start": 1623344400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1624554000,
      "start": 1623949200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1625158800,
      "start": 1624554000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1625763600,
      "start": 1625158800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1626368400,
      "start": 1625763600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1626973200,
      "start": 1626368400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1627578000,
      "start": 1626973200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1628182800,
      "start": 1627578000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1628787600,
      "start": 1628182800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1629392400,
      "start": 1628787600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1629997200,
      "start": 1629392400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1630602000,
      "start": 1629997200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1631206800,
      "start": 1630602000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1631811600,
      "start": 1631206800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1632416400,
      "start": 1631811600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1633021200,
      "start": 1632416400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
  ],
  "0x53C8E199eb2Cb7c01543C137078a038937a68E40": Array [
    Object {
      "amount": 2035.82,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1619715600,
      "start": 1619110800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 0.094819176,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1617901200,
      "start": 1617296400,
      "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
    },
    Object {
      "amount": 1865.215,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1620320400,
      "start": 1619715600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1711.335,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1620925200,
      "start": 1620320400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 0.0302171,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1620925200,
      "start": 1620320400,
      "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
    },
    Object {
      "amount": 1572.205,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1621530000,
      "start": 1620925200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1446.5,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1622134800,
      "start": 1621530000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1332.45,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1622739600,
      "start": 1622134800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1229.185,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1623344400,
      "start": 1622739600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1135.4,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1623949200,
      "start": 1623344400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1624554000,
      "start": 1623949200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1625158800,
      "start": 1624554000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1625763600,
      "start": 1625158800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1626368400,
      "start": 1625763600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1626973200,
      "start": 1626368400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1627578000,
      "start": 1626973200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1628182800,
      "start": 1627578000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1628787600,
      "start": 1628182800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1629392400,
      "start": 1628787600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1629997200,
      "start": 1629392400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1630602000,
      "start": 1629997200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1631206800,
      "start": 1630602000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1631811600,
      "start": 1631206800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1632416400,
      "start": 1631811600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 70,
      "end": 1633021200,
      "start": 1632416400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
  ],
}
`;

exports[`RewardController GET /v2/reward/schedules with an invalid specified chain returns a 400 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`RewardController GET /v2/reward/schedules with no specified chain returns schedules for default chain and all vaults 1`] = `
Object {
  "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28": Array [
    Object {
      "amount": 2035.82,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1619715600,
      "start": 1619110800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 0.094819176,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1617901200,
      "start": 1617296400,
      "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
    },
    Object {
      "amount": 1865.215,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1620320400,
      "start": 1619715600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1711.335,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1620925200,
      "start": 1620320400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 0.0302171,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1620925200,
      "start": 1620320400,
      "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
    },
    Object {
      "amount": 1572.205,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1621530000,
      "start": 1620925200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1446.5,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1622134800,
      "start": 1621530000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1332.45,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1622739600,
      "start": 1622134800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1229.185,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1623344400,
      "start": 1622739600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1135.4,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1623949200,
      "start": 1623344400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1624554000,
      "start": 1623949200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1625158800,
      "start": 1624554000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1625763600,
      "start": 1625158800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1626368400,
      "start": 1625763600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1626973200,
      "start": 1626368400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1627578000,
      "start": 1626973200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1628182800,
      "start": 1627578000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1628787600,
      "start": 1628182800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1629392400,
      "start": 1628787600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1629997200,
      "start": 1629392400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1630602000,
      "start": 1629997200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1631206800,
      "start": 1630602000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1631811600,
      "start": 1631206800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1632416400,
      "start": 1631811600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1633021200,
      "start": 1632416400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
  ],
  "0x53C8E199eb2Cb7c01543C137078a038937a68E40": Array [
    Object {
      "amount": 2035.82,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1619715600,
      "start": 1619110800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 0.094819176,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1617901200,
      "start": 1617296400,
      "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
    },
    Object {
      "amount": 1865.215,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1620320400,
      "start": 1619715600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1711.335,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1620925200,
      "start": 1620320400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 0.0302171,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1620925200,
      "start": 1620320400,
      "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
    },
    Object {
      "amount": 1572.205,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1621530000,
      "start": 1620925200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1446.5,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1622134800,
      "start": 1621530000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1332.45,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1622739600,
      "start": 1622134800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1229.185,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1623344400,
      "start": 1622739600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1135.4,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1623949200,
      "start": 1623344400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1624554000,
      "start": 1623949200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1625158800,
      "start": 1624554000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1050.245,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1625763600,
      "start": 1625158800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1626368400,
      "start": 1625763600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1626973200,
      "start": 1626368400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1627578000,
      "start": 1626973200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1628182800,
      "start": 1627578000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1628787600,
      "start": 1628182800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1629392400,
      "start": 1628787600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1629997200,
      "start": 1629392400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1630602000,
      "start": 1629997200,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1631206800,
      "start": 1630602000,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1631811600,
      "start": 1631206800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1632416400,
      "start": 1631811600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 1150,
      "beneficiary": "0x53C8E199eb2Cb7c01543C137078a038937a68E40",
      "compPercent": 100,
      "end": 1633021200,
      "start": 1632416400,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
  ],
}
`;

exports[`RewardController GET /v2/reward/schedules/<beneficiary> with active param true returns schedules for default chain and one vault 1`] = `
Array [
  Object {
    "amount": 2035.82,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1619715600,
    "start": 1619110800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 0.094819176,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1617901200,
    "start": 1617296400,
    "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
  },
  Object {
    "amount": 1865.215,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1620320400,
    "start": 1619715600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1711.335,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1620925200,
    "start": 1620320400,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 0.0302171,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1620925200,
    "start": 1620320400,
    "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
  },
  Object {
    "amount": 1572.205,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1621530000,
    "start": 1620925200,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1446.5,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1622134800,
    "start": 1621530000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1332.45,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1622739600,
    "start": 1622134800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1229.185,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1623344400,
    "start": 1622739600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1135.4,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1623949200,
    "start": 1623344400,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1050.245,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1624554000,
    "start": 1623949200,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1050.245,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1625158800,
    "start": 1624554000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1050.245,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1625763600,
    "start": 1625158800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1626368400,
    "start": 1625763600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1626973200,
    "start": 1626368400,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1627578000,
    "start": 1626973200,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1628182800,
    "start": 1627578000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1628787600,
    "start": 1628182800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1629392400,
    "start": 1628787600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1629997200,
    "start": 1629392400,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1630602000,
    "start": 1629997200,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1631206800,
    "start": 1630602000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1631811600,
    "start": 1631206800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1632416400,
    "start": 1631811600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1633021200,
    "start": 1632416400,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
]
`;

exports[`RewardController GET /v2/reward/schedules/<beneficiary> with an invalid specified chain returns a 400 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`RewardController GET /v2/reward/schedules/<beneficiary> with invalid param specified returns a 400, NotFound 1`] = `
Object {
  "message": "Unknown vault unknowsvaultdata",
}
`;

exports[`RewardController GET /v2/reward/schedules/<beneficiary> with no specified chain returns schedule for default chain and one vault 1`] = `
Array [
  Object {
    "amount": 2035.82,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1619715600,
    "start": 1619110800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 0.094819176,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1617901200,
    "start": 1617296400,
    "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
  },
  Object {
    "amount": 1865.215,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1620320400,
    "start": 1619715600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1711.335,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1620925200,
    "start": 1620320400,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 0.0302171,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1620925200,
    "start": 1620320400,
    "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
  },
  Object {
    "amount": 1572.205,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1621530000,
    "start": 1620925200,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1446.5,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1622134800,
    "start": 1621530000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1332.45,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1622739600,
    "start": 1622134800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1229.185,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1623344400,
    "start": 1622739600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1135.4,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1623949200,
    "start": 1623344400,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1050.245,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1624554000,
    "start": 1623949200,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1050.245,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1625158800,
    "start": 1624554000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1050.245,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1625763600,
    "start": 1625158800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1626368400,
    "start": 1625763600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1626973200,
    "start": 1626368400,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1627578000,
    "start": 1626973200,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1628182800,
    "start": 1627578000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1628787600,
    "start": 1628182800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1629392400,
    "start": 1628787600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1629997200,
    "start": 1629392400,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1630602000,
    "start": 1629997200,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1631206800,
    "start": 1630602000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1631811600,
    "start": 1631206800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1632416400,
    "start": 1631811600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 1150,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1633021200,
    "start": 1632416400,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
]
`;
